--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1" />
+    <PackageReference Include="NEST" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
