--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1" />
     <PackageReference Include="NEST" Version="6.2.0" />
+    <PackageReference Include="RestSharp" Version="106.3.1" />
   </ItemGroup>
 
 </Project>
