--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="AMQPNetLite.Core" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="1.4.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.0" />
     <PackageReference Include="NEST" Version="6.3.1" />
     <PackageReference Include="RestSharp" Version="106.4.1" />
