--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -15,8 +15,9 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1" />
     <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="1.4.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.2" />
     <PackageReference Include="NEST" Version="6.3.1" />
-    <PackageReference Include="RestSharp" Version="106.4.1" />
+    <PackageReference Include="RestSharp" Version="106.4.2" />
   </ItemGroup>
 
 </Project>
