* Fix project setup * Add Redis test

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>ReinhardHolzner.Core</AssemblyName>
-    <RootNamespace>ReinhardHolzner.HCore</RootNamespace>
+    <RootNamespace>ReinhardHolzner.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
