--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@
 /Core-Identity-PagesUI-Classes/obj
 /Core-Identity-PagesUI-Views/bin
 /Core-Identity-PagesUI-Views/obj
+/Core-Identity-AuthAPI/bin
+/Core-Identity-AuthAPI/obj
 /.vs
