--- a/Core-Identity-PagesUI-Classes/Core-Identity-PagesUI-Classes.csproj
+++ b/Core-Identity-PagesUI-Classes/Core-Identity-PagesUI-Classes.csproj
@@ -9,9 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <ProjectReference Include="..\Core-Templating\Core-Templating.csproj" />
+    <ProjectReference Include="..\Core-Identity-AuthAPI\Core-Identity-AuthAPI.csproj" />
   </ItemGroup>
 
 </Project>
