--- a/OpenAPI/rhcore-authapi-v1.0.0.yaml
+++ b/OpenAPI/rhcore-authapi-v1.0.0.yaml
@@ -1,9 +1,9 @@
 swagger: "2.0"
 
 info:
-  description: The RHCore Authentication API provides the most common methods to handle authentication server side using ASP.NET Identity Core.
+  description: The RHCore Identity Auth API provides the most common methods to handle authentication server side using ASP.NET Identity Core.
   version: "1.0.0-s2"
-  title: RHCore Authentication API
+  title: RHCore Identity Auth API
   contact:
     email: holzner@invest-fit.at
   license:
