* Identity auth API v1

--- a/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
+++ b/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Core-Web\Core-Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Generated\Models\" />
+  </ItemGroup>
+
 </Project>
