* Start with translation management

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@
 /Core-Identity-PagesUI-Views/obj
 /Core-Identity-AuthAPI/bin
 /Core-Identity-AuthAPI/obj
+/Core-Translations/bin
+/Core-Translations/obj
 /.vs
