--- a/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
+++ b/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Exceptions\" />
     <Folder Include="Generated\Models\" />
   </ItemGroup>
 
