* First raw setup for IDSrv * Use specific user model * Remove generic identity UI * Remove area from pages UI * Fix configuration bugs * Add private certificate CA * Add special DB context for identity / IDSrv

--- a/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
+++ b/Core-Identity-AuthAPI/Core-Identity-AuthAPI.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core-Identity\Core-Identity.csproj" />
     <ProjectReference Include="..\Core-Templating\Core-Templating.csproj" />
     <ProjectReference Include="..\Core-Web\Core-Web.csproj" />
   </ItemGroup>
