--- a/Core-Identity/Core-Identity.csproj
+++ b/Core-Identity/Core-Identity.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.DataProtection.SqlServer" Version="1.0.2" />
+    <PackageReference Include="IdentityServer4" Version="2.2.0" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.1.0" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core-Database\Core-Database.csproj" />
     <ProjectReference Include="..\Core-Emailing\Core-Emailing.csproj" />
   </ItemGroup>
 
