* Remove separate auth API, move to identity

--- a/Core-Identity-PagesUI-Classes/Core-Identity-PagesUI-Classes.csproj
+++ b/Core-Identity-PagesUI-Classes/Core-Identity-PagesUI-Classes.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Core-Identity-AuthAPI\Core-Identity-AuthAPI.csproj" />
+    <ProjectReference Include="..\Core-Identity\Core-Identity.csproj" />
   </ItemGroup>
 
 </Project>
