* Add error codes

--- a/Core-Translations/Core-Translations.csproj
+++ b/Core-Translations/Core-Translations.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\ErrorCodes.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorCodes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
