* Fix API license

--- a/OpenAPI/hcore-authapi-v1.0.0.yaml
+++ b/OpenAPI/hcore-authapi-v1.0.0.yaml
@@ -8,7 +8,7 @@ info:
     email: holzner@invest-fit.at
   license:
     name: MIT
-    url: 'https://www.linkedin.com/in/reinhardholzner'
+    url: 'https://github.com/rh78/HCore/blob/master/LICENSE'
     
 host: subdomain.domain.com
 basePath: /auth/v1
