--- a/HCore-Identity/HCore-Identity.csproj
+++ b/HCore-Identity/HCore-Identity.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.DataProtection.SqlServer" Version="1.0.2" />
+    <PackageReference Include="IdentityModel" Version="3.10.1" />
     <PackageReference Include="IdentityServer4" Version="2.2.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.1.0" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.1.1" />
