* Add user first and last name to identity * Configuration options for identity * Fix some state bugs on user manage interface * Introduce separate identity configuration

--- a/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
+++ b/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
@@ -109,6 +109,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HCore-Identity-PagesUI-Classes\HCore-Identity-PagesUI-Classes.csproj" />
+    <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />
   </ItemGroup>
 
 </Project>
