* Identity localization part 1 * Email confirmation optionally required * Fix bug in AMQP messenger

--- a/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
+++ b/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
@@ -9,15 +9,25 @@
 
   <ItemGroup>
     <None Remove="Pages\Account\AccessDenied.cshtml" />
+    <None Remove="Pages\Account\EmailConfirmationSent.cshtml" />
+    <None Remove="Pages\Account\EmailNotConfirmed.cshtml" />
     <None Remove="Pages\Login.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Pages\Account\EmailNotConfirmed.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Include="Pages\Account\ConfirmEmail.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Include="Pages\Account\ForgotPassword.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Include="Pages\Account\EmailConfirmationSent.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
