--- a/HCore-Tenants/HCore-Tenants.csproj
+++ b/HCore-Tenants/HCore-Tenants.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\HCore-Web\HCore-Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Impl\" />
+  </ItemGroup>
+
 </Project>
