* Add generic error page

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 /HCore-Identity-PagesUI-Classes/obj
 /HCore-Identity-PagesUI-Views/bin
 /HCore-Identity-PagesUI-Views/obj
+/HCore-PagesUI-Classes/bin
+/HCore-PagesUI-Classes/obj
+/HCore-PagesUI-Views/bin
+/HCore-PagesUI-Views/obj
 /HCore-Translations/bin
 /HCore-Translations/obj
 /HCore-Tenants/bin
