--- a/HCore-Templating/HCore-Templating.csproj
+++ b/HCore-Templating/HCore-Templating.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="jsreport.AspNetCore" Version="2.0.0" />
     <PackageReference Include="jsreport.Binary" Version="2.2.0" />
     <PackageReference Include="jsreport.Binary.OSX" Version="2.2.1" />
+    <PackageReference Include="jsreport.Binary.Linux" Version="2.2.2" />
     <PackageReference Include="jsreport.Local" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
   </ItemGroup>
