--- a/HCore-Cache/HCore-Cache.csproj
+++ b/HCore-Cache/HCore-Cache.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>HCore.Redis</RootNamespace>
-    <AssemblyName>HCore.Redis</AssemblyName>
+    <RootNamespace>HCore.Cache</RootNamespace>
+    <AssemblyName>HCore.Cache</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="VIEApps.Enyim.Caching" Version="1.5.1901.2" />
   </ItemGroup>
 
 </Project>
