--- a/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
+++ b/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
@@ -110,7 +110,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
   </ItemGroup>
 
   <ItemGroup>
