--- a/HCore-Identity/HCore-Identity.csproj
+++ b/HCore-Identity/HCore-Identity.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="IdentityServer4" Version="2.3.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.3.2" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
   </ItemGroup>
 
   <ItemGroup>    
