--- a/HCore-Rest/HCore-Rest.csproj
+++ b/HCore-Rest/HCore-Rest.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
     <PackageReference Include="RestSharp" Version="106.6.7" />
   </ItemGroup>
 
