--- a/HCore-Storage/HCore-Storage.csproj
+++ b/HCore-Storage/HCore-Storage.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Storage.V1" Version="2.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="9.4.2" />
   </ItemGroup>
 
 </Project>
