--- a/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
+++ b/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
@@ -12,6 +12,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />
+    <ProjectReference Include="..\HCore-Segment\HCore-Segment.csproj" />
   </ItemGroup>
 
 </Project>
